force-app/main/default/objects/Training_Associate__c/Training_Associate__c.object-meta.xml
<CustomObject>
    <description>Contact records associated to training. This includes trainers, assessors and attendees.</description>
    <label>Training Associate</label>
    <nameField>
        <displayFormat>TCR-TRA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Associates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>