force-app/main/default/objects/Training_Associate__c/fields/L_TC_Assessor__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Assessor__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Contact is an assessor</description>
    <label>Assessor</label>
    <type>Checkbox</type>
</CustomField>