force-app/main/default/objects/Training_Associate__c/fields/L_TC_Contact__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Contact__c</fullName>
    <description>ID field holding Contact relationship.</description>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.L_TC_Trainer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.L_TC_Assessor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Associates</relationshipLabel>
    <relationshipName>Contact_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>