force-app/main/default/objects/Training_Associate__c/fields/L_TC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Full_Name__c</fullName>
    <formula>L_TC_Contact__r.I_RS_Full_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>