force-app/main/default/objects/Training_Associate__c/fields/L_TC_Location__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Location__c</fullName>
    <formula>L_TC_Training__r.L_TC_Location__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>