force-app/main/default/objects/Training_Associate__c/fields/L_TC_Trainer__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Trainer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Contact can be a Trainer</description>
    <label>Trainer</label>
    <type>Checkbox</type>
</CustomField>