force-app/main/default/objects/Training_Associate__c/fields/L_TC_Training__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training__c</fullName>
    <description>ID field holding Training relationship.</description>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipName>Training_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>