force-app/main/default/objects/Training_Associate__c/fields/L_TC_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training_Date__c</fullName>
    <formula>L_TC_Training__r.L_TC_Training_Date__c</formula>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>