force-app/main/default/objects/Training_Associate__c/fields/L_TC_Training_Time__c.field-meta.xml
<CustomField>
    <fullName>L_TC_Training_Time__c</fullName>
    <formula>L_TC_Training__r.L_TC_Training_Time__c</formula>
    <label>Training Time</label>
    <type>Time</type>
</CustomField>